--- a/index.html
+++ b/index.html
@@ -19,31 +19,33 @@
       </nav>
     </div>
   <div id="welcome-section">   
-      <h1>Hello, my name is Bryan Rascon, and I have started re-learning coding HTML and CSS.</h1>
+      <h1>Hello, my name is Bryan Rascon. I am a Las Vegas native SWE specializing in Front-End Development.</h1>
   </div>
     <div id="projects">
       <h2>Here are some projects I have created during my journey.</h2>
       <div id="tiles">
-        <div class="project-tile">
-          <p><a target="_blank" href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-survey-form-project/build-a-survey-form">A Breakfast Survey.</a></p>
+        <div>
+          <p><a target="_blank" href="https://reptiliansobe.github.io/survey/">A Breakfast Survey.</a></p>
         </div>
-        <div class="project-tile">
-          <p><a target="_blank" href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-tribute-page-project/build-a-tribute-page">Tribute Page.</a></p>
+        <div>
+          <p><a target="_blank" href="https://reptiliansobe.github.io/tribute/">Tribute Page.</a></p>
         </div>
-        <div class="project-tile">
-          <p><a target="_blank" href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-technical-documentation-page-project/build-a-technical-documentation-page">An HTML Technical Documentation Page.</a></p>
+        <div>
+          <p><a target="_blank" href="https://reptiliansobe.github.io/techDoc/">An HTML Technical Documentation Page.</a></p>
         </div>
-        <div class="project-tile">
-          <p><a target="_blank" href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page">A Pizza Website.</a></p>
+        <div>
+          <p><a target="_blank" href="https://reptiliansobe.github.io/pizza/">A Pizza Website.</a></p>
         </div>
       </div>
     </div>
     <div id="contact">
-      <h3>Below you can view my social media</h3>
+      <h3>Below you can view all my links and projects :)</h3>
     <div id="links">
-      <p><a id="profile-link" target="_blank" href="https://www.freecodecamp.org/reptiliansobe">freeCodeCamp Profile</a></p>
+      <p><a target="_blank" href="https://github.com/reptiliansobe">github</a></p>
+      <p><a target="_blank" href="https://codepen.io/reptiliansobe/pens/">CodePen</a></p>
+      <p><a target="_blank" href="https://www.freecodecamp.org/reptiliansobe">freeCodeCamp Profile</a></p>
       <p><a target="_blank" href="https://www.linkedin.com/in/bryan-rascon-b10a8b164/">LinkedIn</a></p>
-      <p>Email: brascon30@gmail.com</p>
+      <p>Contact me directly at my email: brascon30@gmail.com :)</p>
       </div>
     </div>
   </body>
